# PSB

./: .gitignore  CHANGELOG  INSTALL  Makefile  README  README.md  makefile  notes.txt  plot.sh  refactor_roadmap.txt  roadmap.txt
deprecated/: cimgxtra.cpp  circiter.cpp  code  file.cpp  image.cpp  iterative_solvers.cpp  main.cpp  makefile  makeplot.sh  makeplott.sh  plot.sh
deprecated/solvers/GS/: gauss.cpp  gauss_image.cpp  main.cpp
doc/: 3.1 Poisson's Equation and Relaxation Methods.html  PSB.1  Partial Differential Equations.html  index.html  roadmap.txt  sources.txt
large_media/crop/: 100100GUESS.txt
large_media/crop/NEW/: 100100RHO.txt
large_media/crop/txt/: 100100GUESS.txt  100100IMAGE.txt  100100RHO.txt
lib/CImg-1.5.8/: CImg.h
linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  conv.cpp  create_image.py  fft.cpp  file.cpp  ident.py  image.cpp  image2.cpp  image2.hpp  imagePreview.cpp  imageQueue.cpp  imageUtil.cpp  imageedit.cpp  iterative_solvers.cpp  iterative_solvers.hpp  loadingbar.cpp  logger.cpp  logger.hpp  loginstance.hpp  main.cpp  make_test_image.cpp  plot.cpp  plot.hpp  plot2.sh  roadmap.txt  solver.cpp  source.txt  wavelet.cpp  wavelet.hpp
src/debug_tools/: 2  create_image.py  gauss_projectsNaturalnessdata100001jpg_34.5628_9201.tmp  graph.sh  hack.sh  make_test_image.cpp  makeplot.sh  mytext.txt  open_output.sh  padarray.m  plot.py  plotme.sh  printImage.py  processTextFile.cpp  pyconv.m  stageIterative.py  stagePlot.sh  test.m  test.m~~  tryPlot.sh  tryplot.py  workingTryplot.py
src/include/: fft.hpp  file.hpp  image2.hpp  imagePreview.hpp  imageQueue.hpp  imageUtil.hpp  image_types.hpp  imageedit.hpp  iterative_solvers.hpp  loadingbar.hpp  logger.hpp  loginstance.hpp  plot.hpp  solver.hpp  wavelet.hpp
src/solvers/: FFT.cpp  fft.cpp  iterative_solvers.cpp  wavelet.cpp
src/solvers/GS/: fft.cpp  gauss_image.cpp  multigrid.cpp
useData/: allTogether.outimage  gaussNormal.outimage  gaussplot.outimage  jacobi_plot.outimage  sorplot.outimage
